<resources>
    <string name="title_activity">Activity Two</string>
    <string name="app_name">Tampilan Input</string>
    <string name="ouput">Tampilan Output</string>
    <string name="nama">Nama :</string>
    <string name="umur">Umur :</string>
    <string name="perempuan">Perempuan</string>
    <string name="lakilaki">Laki-laki</string>
    <string name="jeniskelamin">Jenis Kelamin :</string>
    <string name="kirimdata">Kirim Data</string>
</resources>
